--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-    <h1 class="display-4 text-center"><b>About Goals App</b></h1>
+    <h1 class="display-4 text-center"><b>About Goals App.</b></h1>
     <hr class="my-4">
     <p class="lead text-center"></p>
   </div>
