--- a/src/app/goal-form/goal-form.component.html
+++ b/src/app/goal-form/goal-form.component.html
@@ -8,7 +8,7 @@
             <label for="name">Name</label>
             <input type="text" class="form-control" id="name" [(ngModel)]="newGoal.name" name="name" #name='ngModel' required>
             <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-              <p>Name is required</p>
+              <p>Name is required.</p>
             </div>
         </div>
         <div class="form-group">
